services/couchbase-sync-gateway/manifests/couchbase-sync-gateway/couchbase-sync-gateway/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: couchbase-sync-gateway--couchbase-sync-gateway
spec:
  rules:
    - host: couchbase-sync-gateway.PLACEHOLDER
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: couchbase-sync-gateway--couchbase-sync-gateway
                port:
                  number: 4984
